--- a/aiops/metric/metric_analysis/run_model.ipynb
+++ b/aiops/metric/metric_analysis/run_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "4343a28f-9f4f-4854-8df6-04833738189e",
    "metadata": {
     "scrolled": true,
@@ -52,10 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "e3b29479-b758-4d86-8102-0f65961a23b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unclosed connection: Channel('localhost', 11090, ..., path=None)\n"
+     ]
+    }
+   ],
    "source": [
     "channel = Channel(host=\"localhost\", port=11090) # url of opni-internal. can port-forward to localhost:11090\n",
     "service = CortexAdminStub(channel)"
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "56ba21a9",
    "metadata": {},
    "outputs": [],
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "071b61b0",
    "metadata": {},
    "outputs": [],
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "f83a006c",
    "metadata": {},
    "outputs": [],
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "694e75b9",
    "metadata": {},
    "outputs": [
@@ -184,7 +192,7 @@
        " 'shippingservice']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,17 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "2ec6bf70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2023, 4, 13, 14, 11, 19, 615347)"
+       "datetime.datetime(2023, 4, 18, 17, 29, 26, 220142)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "475263e9",
    "metadata": {},
    "outputs": [],
@@ -266,24 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "364a2afa",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hl/6plb9y193wngh39z1dzl5rvh0000gn/T/ipykernel_85545/3216190597.py:31: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  stat, p_value = ttest_ind(l1, l2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n",
-      "1138\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'normalize_format' from 'model.data_simulator' (/Users/tybalex/workspace/opni/aiops/metric/metric_analysis/model/data_simulator.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m imrpove_data \u001b[39m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodel\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_simulator\u001b[39;00m \u001b[39mimport\u001b[39;00m normalize_format\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprocess_task2\u001b[39m(d, q1 ,m_name, is_debug \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m      4\u001b[0m     count \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'normalize_format' from 'model.data_simulator' (/Users/tybalex/workspace/opni/aiops/metric/metric_analysis/model/data_simulator.py)"
      ]
     }
    ],
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3decd1a5",
    "metadata": {},
    "outputs": [],
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "410a4bb4",
    "metadata": {},
    "outputs": [
@@ -715,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "93d838bf",
    "metadata": {},
    "outputs": [],
@@ -879,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "3b53291a",
    "metadata": {},
    "outputs": [],
