Adding the ability to display and change the metrics capability provider
https://github.com/orgs/rancher/projects/36/views/1?pane=issue&itemId=27390729

--- a/web/pkg/opni/l10n/en-us.yaml
+++ b/web/pkg/opni/l10n/en-us.yaml
@@ -81,6 +81,7 @@ opni:
     numSeries: Number Series
     period: Period
     podName: Pod Name
+    provider: Provider
     role: Role
     sampleRate: Sample Rate
     status: Status
