Monitoring capability table column wording adjustments

--- a/web/pkg/opni/l10n/en-us.yaml
+++ b/web/pkg/opni/l10n/en-us.yaml
@@ -78,12 +78,12 @@ opni:
     matchLabels: Match Labels
     name: Name
     namespace: Namespace
-    numSeries: Number Series
+    numSeries: Series Count
     period: Period
     podName: Pod Name
     provider: Provider
     role: Role
-    sampleRate: Sample Rate
+    sampleRate: Sample Ingest Rate
     status: Status
     subjects: Subjects
     tags: Tags
