--- a/web/pkg/opni/l10n/en-us.yaml
+++ b/web/pkg/opni/l10n/en-us.yaml
@@ -64,7 +64,7 @@ opni:
   tableHeaders:
     agentName: Agent Name
     capabilities: Capabilities
-    clusterId: ClusterId
+    clusterId: Cluster ID
     clusters: Clusters
     date: Date
     description: Description
