--- a/web/pkg/opni/l10n/en-us.yaml
+++ b/web/pkg/opni/l10n/en-us.yaml
@@ -70,6 +70,7 @@ opni:
     description: Description
     empty: ""
     expiration: Expiration
+    group: Group
     id: Id
     labels: Labels
     local: Local
